// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border: 1px solid red 1`] = `
{
  "27": {
    "unit": 2,
    "value": 1,
  },
  "28": 1,
  "30": {
    "unit": 2,
    "value": 1,
  },
  "31": 1,
  "33": {
    "unit": 2,
    "value": 1,
  },
  "34": 1,
  "36": {
    "unit": 2,
    "value": 1,
  },
  "37": 1,
  "56": 4294901760,
  "61": 4294901760,
  "62": 4294901760,
  "63": 4294901760,
}
`;

exports[`border-width: medium 1`] = `
{
  "27": {
    "unit": 2,
    "value": 3,
  },
  "30": {
    "unit": 2,
    "value": 3,
  },
  "33": {
    "unit": 2,
    "value": 3,
  },
  "36": {
    "unit": 2,
    "value": 3,
  },
}
`;

exports[`border-width: thick 1`] = `
{
  "27": {
    "unit": 2,
    "value": 5,
  },
  "30": {
    "unit": 2,
    "value": 5,
  },
  "33": {
    "unit": 2,
    "value": 5,
  },
  "36": {
    "unit": 2,
    "value": 5,
  },
}
`;

exports[`border-width: thin 1`] = `
{
  "27": {
    "unit": 2,
    "value": 1,
  },
  "30": {
    "unit": 2,
    "value": 1,
  },
  "33": {
    "unit": 2,
    "value": 1,
  },
  "36": {
    "unit": 2,
    "value": 1,
  },
}
`;
